--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'	//lombok
 		// log4jdbc	
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4' //Bcrypt 암호화
 	
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 //	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter'
