--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 Server.Port = 8081
+ 
+ server.servlet.encoding.charset=UTF-8  
+server.servlet.encoding.enabled=true  
+server.servlet.encoding.force=true
 
 #spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/stadion_db_dev?characterEncoding=UTF-8&serverTimezone=UTC
