Change spring/JRE version tomato's server only support JRE 11

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-Server.Port = 8081
+Server.Port = 8080
  
- server.servlet.encoding.charset=UTF-8  
+server.servlet.encoding.charset=UTF-8  
 server.servlet.encoding.enabled=true  
 server.servlet.encoding.force=true
+
 
 #spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/stadion_db_dev?characterEncoding=UTF-8&serverTimezone=UTC
@@ -15,6 +16,8 @@ spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://222.239.14.106:3306/stadion_db_dev
 spring.datasource.username=stadion_user_dev
 spring.datasource.password=tmxkeldhsDB!90
+
+
 
 # Runtime 콘솔 화면에 SQL 쿼리문을 나타낸다.
 spring.jpa.show-sql=true
@@ -32,3 +35,26 @@ mybatis.type-aliases-package=com.stadion.api.mapper
 #mybatis.config=classpath:mybatis/mybatis-config.xml
 #mybatis.mapper-locations=mybatis/**/*.xml
 #mybatis.mapper-locations= classpath:mapper/**/*.xml
+
+# swagger custom 주소(default 주소인 /swagger-ui/index.html 로 설정할 수 없다)
+springdoc.swagger-ui.path=/swagger-ui
+# /api-docs endpoint custom path
+springdoc.api-docs.path=/api-docs
+# tag sorter
+springdoc.swagger-ui.tags-sorter=alpha
+# request media type
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+# response media type
+springdoc.default-produces-media-type=application/json;charset=UTF-8
+# 확장하지 않기
+springdoc.swagger-ui.docExpansion="none"
+# auth 유지
+springdoc.swagger-ui.persistAuthorization=true
+# 페이지 마지막에 보여지는 schema hidden
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+# fully qualifed name (Schema를 전체 경로로 가져오기)
+springdoc.use-fqn=true
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+spring.mvc.view.prefix: /
+spring.mvc.view.suffix: .jsp
