--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,17 @@
 plugins {
 	id 'java'
 	id 'war'
-	id 'org.springframework.boot' version '3.1.3'
-	id 'io.spring.dependency-management' version '1.1.3'
+	// Tomato 서버 환경 이슈(tomcat9)로 버전 변경, spring=2.7.5, JRE=11
+	id 'org.springframework.boot' version '2.7.5' // 3.1.3, down grade to use JAVA 11
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE' // 1.1.3
 }
 
 group = 'com.stadion'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+// Tomato 서버 환경 이슈(tomcat9)로 버전 변경, spring=2.7.5, JRE=11
+	sourceCompatibility = '11' //17
 }
 
 repositories {
@@ -20,32 +22,31 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	implementation 'javax.servlet:jstl:1.2'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	//https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
 //	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 //	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+//	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2' // for sts 3.x
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0' // for sts 2.x
+	implementation 'org.springframework.boot:spring-boot-starter-parent:2.6.4'
+
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'	
+
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'		
 	implementation 'org.mariadb.jdbc:mariadb-java-client'
-	// https://mvnrepository.com/artifact/org.mybatis/mybatis
-	implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.6'
-	compileOnly 'org.projectlombok:lombok'	//lombok
-	annotationProcessor 'org.projectlombok:lombok'	//lombok
-		// log4jdbc	
-	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
-	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4' //Bcrypt 암호화
 	
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
-//	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter'
-	//compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1") // Spring Boot에 mybatis lib 제공
-   //implementation 'org.json:json:20200518'
-   // https://mvnrepository.com/artifact/com.google.code.gson/gson
+	implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.6'
+	
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+
 	implementation("com.google.code.gson:gson:2.7")
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
    
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+
+
