db타겟 live로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ server.servlet.encoding.force=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://222.239.14.106:3306/stadion_db_dev
-spring.datasource.username=stadion_user_dev
+spring.datasource.url=jdbc:mariadb://175.126.163.142:3306/stadion_db
+spring.datasource.username=stadion_user
 spring.datasource.password=tmxkeldhsDB!90
 
 
